crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_expression_name_qualified_class_instance_creation.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class QualifiedCreation {
  Outer outer;

  void method() {
    Object inner = outer.new Inner();
  }
}

class Outer {
  class Inner {
  }
}

diagnostics:
(none)
