crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_field_access_resource_variable_access.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FieldAccessResource {
  AutoCloseable existing;

  void method() throws Exception {
    try (
      this.existing
    ) {
    }
  }
}

diagnostics:
(none)
