crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_flexible_constructor_bodies.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Base {
  Base(int value) {
  }
}

class FlexibleConstructor extends Base {
  FlexibleConstructor(String text) {
    int value = Integer.parseInt(text);
    super(value);
  }
}

diagnostics:
(none)
