crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_floating_point_type.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class FloatingPointTypes {
  float single;
  double wide;
}

diagnostics:
(none)
