crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_for_statement_expression_lists.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ForExpressionLists {
  void method() {
    int i;
    int j;
    for (i = 0, j = 0; i < 10; i++, j++) {
    }
  }
}

diagnostics:
(none)
