crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_generic_array_constructor_references.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class GenericArrayConstructorReference {
  void method(java.util.Set<Class<?>> classes) {
    Class<?>[] copied = classes.toArray(Class<?>[]::new);
    java.util.function.IntFunction<java.util.List<String>[]> factory =
      java.util.List<String>[]::new;
  }
}

diagnostics:
(none)
