crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_guarded_switch_rule_lambda_results.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class GuardedSwitchRuleLambdaResults {
  java.util.function.Function<Integer, Integer> method(Object value) {
    return switch (value) {
      case Boolean enabled when enabled -> x -> x + 1;
      default -> x -> x;
    };
  }
}

diagnostics:
(none)
