crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_instanceof_pattern_expression_boundaries.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class InstanceofPatternExpressionBoundaries {
  int conditional(Object value) {
    return value instanceof String text ? text.length() : 0;
  }

  boolean[] initializer(Object value) {
    return new boolean[] { value instanceof String text };
  }

  Object guardedSwitch(Object value, Object candidate) {
    return switch (value) {
      case Integer number when candidate instanceof String text -> text;
      default -> null;
    };
  }
}

diagnostics:
(none)
