crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_instanceof_reference_type_and_pattern_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class InstanceofForms {
  boolean method(Object value) {
    return value instanceof byte[]
      || value instanceof String[]
      || value instanceof java.util.List<?>
      || value instanceof String text;
  }
}

diagnostics:
(none)
