crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_interface_and_annotation_interface_declarations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
sealed interface Shape extends Drawable permits Circle {
  int SIDES = 0;

  private static void helper() {
  }

  void draw();
}

non-sealed interface Circle extends Shape {
}

interface Drawable {
}

@interface JsonName {
  String value() default "";

  int[] flags() default { 1, 2 };
}

diagnostics:
(none)
