crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_intersection_cast_expression.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class IntersectionCast {
  void method(Object value) {
    Runnable runnable = (Runnable & AutoCloseable) value;
  }
}

diagnostics:
(none)
